Change string type from double to single

--- a/docz/components/NotFound.mdx
+++ b/docz/components/NotFound.mdx
@@ -4,9 +4,9 @@ name: NotFound
 route: /
 ---
 
-import { Playground } from "docz"
+import { Playground } from 'docz'
 
-import NotFound from "../../src/components/notFound/NotFound"
+import NotFound from '../../src/components/notFound/NotFound'
 
 # NotFound
 
